--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'com.github.johnrengelman.shadow' version '2.0.4'
-    id "com.fizzed.rocker" version "0.24.0"
     id "org.asciidoctor.convert" version "1.5.7"
     id "org.ajoberstar.grgit" version "2.2.1"
-    id "org.ajoberstar.git-publish" version "1.0.1-rc.2"
+    id "org.ajoberstar.git-publish" version "1.0.1"
+    id "com.fizzed.rocker" version '1.2.1'
 }
+def rockerVersion = '1.2.1'
 
 defaultTasks 'clean', 'shadow'
 
@@ -19,7 +20,6 @@ version = '1.0.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-task wrapper(type: Wrapper) { gradleVersion = '4.8' }
 
 configurations {
     procrun // for downloading
@@ -105,7 +105,7 @@ task provisionProcrun(type: Copy) {
 
 dependencies {
     compile group: 'org.graylog.repackaged', name: 'os-platform-finder', version: '1.2.3'
-    compile('com.fizzed:rocker-runtime:0.24.0')
+    compile('com.fizzed:rocker-runtime:' + rockerVersion)
 
     procrun group: 'commons-daemon', name: 'commons-daemon', classifier: 'bin-windows', ext: 'zip', version: '1.1.0'
 
@@ -131,7 +131,7 @@ task setupDocinfo() {
         file(docinfodir.path + "/docinfo.html").text = """
             <style>
               ${css}
-#toc.toc2{overflow-y:hidden}
+              #toc.toc2{overflow-y:hidden}
               .toc{overflow-y:auto}.toc>.toc-list{overflow:hidden;position:relative}.toc>.toc-list li{list-style:none}.toc-list{margin:0;padding-left:10px}a.toc-link{color:currentColor;height:100%}.is-collapsible{max-height:1000px;overflow:hidden;transition:all 300ms ease-in-out}.is-collapsed{max-height:0}.is-position-fixed{position:fixed !important;top:0}.is-active-link{font-weight:700}.toc-link::before{background-color:#EEE;content:' ';display:inline-block;height:inherit;left:0;margin-top:-1px;position:absolute;width:2px}.is-active-link::before{background-color:#54BC4B}
             </style>
             """.stripIndent()
