--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,7 @@ pluginManagement {
 }
 
 plugins {
-    id('net.gradleutil.gradle-conf') version('1.1.9-SNAPSHOT')
+    id('net.gradleutil.gradle-conf') version('1.1.18')
 }
 
 rootProject.name = 'daevil'
