--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -15,10 +15,11 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
+          distribution: temurin
           java-version: 11
 
       - name: Setup build cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
