--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ test {
     testLogging { events "skipped", "failed" }
     testLogging.exceptionFormat = 'full'
     // show standard out and standard error of the test JVM(s) on the console
-    testLogging.showStandardStreams = true
+    //testLogging.showStandardStreams = true
 }
 
 
