--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -18,15 +18,16 @@ jobs:
           distribution: temurin
           java-version: 11
 
-      - name: Setup build cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2.8.1
+        env:
+          MAVENCENTRALUSERNAME: ${{ secrets.MAVENCENTRALUSERNAME }}
+          MAVENCENTRALPASSWORD: ${{ secrets.MAVENCENTRALPASSWORD }}
+          SIGNINGKEY: ${{ secrets.SIGNINGKEY }}
+          SIGNINGPASSWORD: ${{ secrets.SIGNINGPASSWORD }}
+
+      - name: Execute Gradle build
+        run: ./gradlew publishShadowPublicationToMavenRepository
 
   release-notes:
     runs-on: ubuntu-20.04
