gh action update

--- a/build.gradle
+++ b/build.gradle
@@ -242,36 +242,25 @@ task docsPublish() {
 }
 
 
+confConfig{
+    conf.set file(System.getProperty("user.home") + '/.cfdistrorc.propertiesss')
+    silent.set true
+}
+
 apply plugin: 'signing'
 
 ext {
-    deployToMaven = System.getenv('SIGNINGKEY')
+    deployToMaven = System.getenv('SIGNINGKEY') ?: config?.gpg?.cfmlprojects?.signkeyid
     isSnapshot = version.endsWith("SNAPSHOT")
-}
-
-confConfig{
-    conf.set file(System.getProperty("user.home") + '.cfdistrorc')
-    generateBean.set true
-    silent.set false
-    outputDirectory.set new File(rootDir,'src/dsl')
-    rootClassName.set 'con'
-   // schemaFile.set file('config.schema.json')
 }
 
 
 if (deployToMaven) {
     signing {
-        //ext['signing.keyId'] = project.config.gpg.cfmlprojects.signkeyid
-        //ext['signing.password'] = project.config.gpg.cfmlprojects.pass
-        //ext['signing.secretKeyRingFile'] = project.config.gpg.cfmlprojects.secring
-        //username project.config.sonatype.cfmlprojects.user
-        //password project.config.sonatype.cfmlprojects.pass
-
-        
-        def signingKey = System.getenv('SIGNINGKEY')
-        def signingPassword = System.getenv('SIGNINGPASSWORD')
+        def signingKey = System.getenv('SIGNINGKEY') ?: config.gpg.cfmlprojects.key
+        def signingPassword = System.getenv('SIGNINGPASSWORD') ?: config.gpg.cfmlprojects.pass
         useInMemoryPgpKeys(signingKey, signingPassword)
-        sign configurations.archives 
+        sign configurations.archives
     }
 } else {
     task signArchives() {
@@ -300,9 +289,11 @@ publishing {
             } else {
                 url "https://oss.sonatype.org/service/local/staging/deploy/maven2"
             }
-            credentials {
-                username = System.getenv('SIGNINGKEY')
-                password = System.getenv('SIGNINGKEY')
+            if(deployToMaven){
+                credentials {
+                    username = System.getenv('MAVENCENTRALUSERNAME') ?: config.sonatype.cfmlprojects.user
+                    password = System.getenv('MAVENCENTRALPASSWORD') ?: config.sonatype.cfmlprojects.pass
+                }
             }
         }
     }
