--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'
     id "org.asciidoctor.convert" version "1.5.7"
+    id('net.gradleutil.gradle-conf') version('1.1.18')
     id "org.ajoberstar.grgit" version "5.2.0"
     id "org.ajoberstar.git-publish" version "3.0.0"
-    id('net.gradleutil.gradle-conf') version('1.1.18')
+    id "de.marcphilipp.nexus-publish" version "0.3.0"
+    id "io.codearte.nexus-staging" version "0.21.2"
+    id 'idea'
+    id 'signing'
 }
 def confGenVersion = '1.1.18'
 
@@ -17,7 +21,7 @@ group = 'org.cfmlprojects'
 description = 'Daevil Gradle build script'
 archivesBaseName = 'daevil'
 
-version = '1.0.2'
+version = '1.0.3-SNAPSHOT'
 
 sourceCompatibility = 11
 targetCompatibility = 11
@@ -50,21 +54,6 @@ shadowJar {
         exclude(dependency('com.google.guava:.*'))
     }
     minimize()
-    Set<File> jars = []
-    eachFile{
-        if(it.name.endsWith('.jar')){
-            jars.add(it.file as File)
-        }
-    }
-    doLast {
-        jars.sort{it.length()}.each{ file ->
-            def formatStr = "%,10.2f"
-            logger.lifecycle("${String.format(formatStr, file.length() / 1024 / 1024)} Mb " + file.name)
-        }
-        def jarFile = outputs.files.first() as File
-        def formatStr = "%,10.2f"
-        logger.lifecycle("Shadow jar:" + jarFile + "${String.format(formatStr, jarFile.length() / 1024)} Mb")
-    }
 }
 
 test {
@@ -248,82 +237,109 @@ confConfig{
     silent.set true
 }
 
-apply plugin: 'signing'
 
 ext {
-    deployToMaven = System.getenv('SIGNINGKEY') ?: config?.gpg?.cfmlprojects?.signkeyid
     isSnapshot = version.endsWith("SNAPSHOT")
 }
 
-if (deployToMaven) {
-    signing {
-        def signingKey = System.getenv('SIGNINGKEY') ?: config.gpg.cfmlprojects.key
-        def signingPassword = System.getenv('SIGNINGPASSWORD') ?: config.gpg.cfmlprojects.pass
-        useInMemoryPgpKeys(signingKey, signingPassword)
-        sign configurations.archives
+apply plugin: 'maven-publish'
+
+jar {
+    archiveClassifier.set('thin')
+    dependsOn(shadowJar)
+}
+artifacts { archives javadocJar, sourcesJar }
+
+
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
     }
+}
+
+nexusStaging {
+    packageGroup = "org.cfmlprojects"
+    numberOfRetries = 40 // we've seen extremely long delays in closing repositories
+}
+
+
+publishing {
+    publications {
+        shadow(MavenPublication) { publication ->
+            project.shadow.component(publication)
+
+            artifact jar
+            artifact sourcesJar
+            artifact javadocJar
+
+            pom {
+                name = 'Daevil'
+                description = 'Daevil makes daemons'
+                url = 'https://github.com/cfmlprojects/daevil'
+                organization {
+                    name = 'org.cfmlprojects'
+                    url = 'https://github.com/cfmlprojects'
+                }
+                issueManagement {
+                    system = 'GitHub'
+                    url = 'https://github.com/cfmlprojects/daevil/issues'
+                }
+                licenses {
+                    license {
+                        name = 'MIT'
+                        url = 'https://opensource.org/license/mit'
+                    }
+                }
+                scm {
+                    url = 'https://github.com/cfmlprojects/daevil'
+                    connection = 'scm:git:git://github.com/cfmlprojects/daevil.git'
+                    developerConnection = 'scm:git:ssh://git@github.com:cfmlprojects/daevil.git'
+                }
+                developers { developer { id = 'denny'; name = 'Denny Valliant'; email = 'valliantster@gmail.com' } }
+            }
+        }
+    }
+    repositories {
+        mavenLocal()
+        maven {
+            name "weee"
+            url = layout.buildDirectory.dir('repo')
+        }
+    }
+}
+
+nexusPublishing {
+    clientTimeout = java.time.Duration.ofMinutes(2) // we've seen extremely long delays in creating repositories
+    repositories {
+        sonatype {
+            username = project.config.sonatype.cfmlprojects.user
+            password = project.config.sonatype.cfmlprojects.pass
+        }
+    }
+}
+
+if (!shouldSkipSigning()) {
+    ext['signing.keyId'] = project.config.gpg.cfmlprojects.signkeyid
+    ext['signing.password'] = project.config.gpg.cfmlprojects.pass
+    ext['signing.secretKeyRingFile'] = (project.config.gpg.cfmlprojects.secring).replace('${user.home}', System.getProperty("user.home"))
 } else {
     task signArchives() {
-        description = "Add a  with signing info to enbable jar signing"
+        description = "Add a ${ext.cfdistrorcFile} with signing info to enbable jar signing"
         doFirst {
             println "Signing is disabled without keys"
         }
     }
 }
-signArchives.group = 'publishing'
 
-apply plugin: 'maven-publish'
-
-jar {
-    enabled(true)
-    archiveClassifier.set('core')
-    dependsOn(shadowJar)
-}
-artifacts { archives javadocJar, sourcesJar }
-
-publishing {
-    repositories {
-        maven {
-            if (project.isSnapshot) {
-                url "https://oss.sonatype.org/content/repositories/snapshots"
-            } else {
-                url "https://oss.sonatype.org/service/local/staging/deploy/maven2"
-            }
-            if(deployToMaven){
-                credentials {
-                    username = System.getenv('MAVENCENTRALUSERNAME') ?: config.sonatype.cfmlprojects.user
-                    password = System.getenv('MAVENCENTRALPASSWORD') ?: config.sonatype.cfmlprojects.pass
-                }
-                println credentials
-            }
-        }
-    }
-    publications {
-        shadow(MavenPublication) { publication ->
-            project.shadow.component(publication)
-            artifact sourcesJar
-            artifact javadocJar
-            if (deployToMaven) {
-                // create the signed artifacts
-                project.tasks.signArchives.signatureFiles.each {
-                    artifact(it) {
-                        def matcher = it.file =~ /-(sources|javadoc)\.jar\.asc$/
-                        if (matcher.find()) {
-                            classifier = matcher.group(1)
-                        } else {
-                            classifier = null
-                        }
-                    }
-                }
-            }
-        }
-    }
+signing {
+    sign publishing.publications.shadow
 }
 
-model {
-    tasks.generatePomFileForShadowPublication{
-        destination = file("$buildDir/generated-pom.xml")
-    }
-    tasks.publishShadowPublicationToMavenLocal { dependsOn project.tasks.signArchives }
-    tasks.publishShadowPublicationToMavenRepository { dependsOn project.tasks.signArchives }
+tasks.withType(Sign) { t ->
+    onlyIf { !shouldSkipSigning() } // so we can build jars for testing in CI
+}
+
+def shouldSkipSigning() {
+    return (System.getenv('SIGNINGKEY') ?: config?.gpg?.cfmlprojects?.signkeyid).isEmpty()
 }
