--- a/build.gradle
+++ b/build.gradle
@@ -341,5 +341,5 @@ tasks.withType(Sign) { t ->
 }
 
 def shouldSkipSigning() {
-    return (System.getenv('SIGNINGKEY') ?: config?.gpg?.cfmlprojects?.signkeyid).isEmpty()
+    return (System.getenv('SIGNINGKEY') ?: config?.gpg?.cfmlprojects?.signkeyid)?.isEmpty()
 }
