maven artifact test

--- a/build.gradle
+++ b/build.gradle
@@ -339,5 +339,5 @@ tasks.withType(Sign) { t ->
 }
 
 def shouldSkipSigning() {
-    return System.getenv('SIGNINGKEY') ? config?.gpg?.cfmlprojects?.signkeyid : false
+    return !(System.getenv('SIGNINGKEY') || config?.gpg?.cfmlprojects?.signkeyid)
 }
