--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -27,7 +27,7 @@ jobs:
           MAVENCENTRALPASSWORD: ${{ secrets.MAVENCENTRALPASSWORD }}
           SIGNINGKEY: ${{ secrets.SIGNINGKEY }}
           SIGNINGPASSWORD: ${{ secrets.SIGNINGPASSWORD }}
-        run: ./gradlew publishShadowPublicationToSonatypeRepository
+        run: ./gradlew build
 
   release-notes:
     runs-on: ubuntu-20.04
