--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -29,4 +29,4 @@ jobs:
           SIGNINGPASSWORD: ${{ secrets.SIGNINGPASSWORD }}
 
       - name: Execute Gradle build
-        run: ./gradlew publishShadowPublicationToSonatypeRepository
+        run: ./gradlew publishToSonatype closeAndReleaseStagingRepository
