--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -6,33 +6,26 @@ on:
       - master
 
 jobs:
-  build:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout latest code
-        uses: actions/checkout@v3
+  publish-release:
+    strategy:
+      matrix:
+        #os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 11
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2.8.1
-
       - name: Execute Gradle build
         env:
           MAVENCENTRALUSERNAME: ${{ secrets.MAVENCENTRALUSERNAME }}
           MAVENCENTRALPASSWORD: ${{ secrets.MAVENCENTRALPASSWORD }}
           SIGNINGKEY: ${{ secrets.SIGNINGKEY }}
           SIGNINGPASSWORD: ${{ secrets.SIGNINGPASSWORD }}
-        run: ./gradlew build
-
-  release-notes:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Release Drafter
-        uses: release-drafter/release-drafter@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: ./gradlew publishToSonatype closeAndReleaseStagingRepository
